feat: assign employee to pending order
