# src/main/java/com/pragma/powerup/application/handler/IOrderHandler.java
@@ -9,4 +9,5 @@ public interface IOrderHandler {
 
     OrderResponseDto saveOrder(OrderRequestDto requestDto);
     PageResponseDto<OrderResponseDto> getOrders(OrderFilterRequestDto requestDto);
+    OrderResponseDto assignOrder(Long orderId);
 }
